    could result in git-annex not recording on the local side where the
    file was moved to. This could not result in data loss, or even a
    significant problem, since the remote *did* record that it had the file.
  * Also, add a general guard to detect attempts to record information
    about repositories with missing UUIDs.

 -- Joey Hess <joeyh@debian.org>  Tue, 04 Jan 2011 17:33:42 -0400

git-annex (0.15) unstable; urgency=low

  * Support scp-style urls for remotes (host:path).
  * Support ssh urls containing "~".
  * Add trust and untrust subcommands, to allow configuring repositories
    that are trusted to retain files without explicit checking.
  * Fix bug in numcopies handling when multiple remotes pointed to the
    same repository.
  * Introduce the git-annex-shell command. It's now possible to make
    a user have it as a restricted login shell, similar to git-shell.
  * Note that git-annex will always use git-annex-shell when accessing
    a ssh remote, so all of your remotes need to be upgraded to this
    version of git-annex at the same time.
  * Now rsync is exclusively used for copying files to and from remotes.
    scp is not longer supported.

 -- Joey Hess <joeyh@debian.org>  Fri, 31 Dec 2010 22:00:52 -0400

git-annex (0.14) unstable; urgency=low

  * Bugfix to git annex unused in a repository with nothing yet annexed.
  * Support upgrading from a v0 annex with nothing in it.
  * Avoid multiple calls to git ls-files when passed eg, "*".

 -- Joey Hess <joeyh@debian.org>  Fri, 24 Dec 2010 17:38:48 -0400

git-annex (0.13) unstable; urgency=low

  * Makefile: Install man page and html (when built).
  * Makefile: Add GHCFLAGS variable.
  * Fix upgrade from 0.03.
  * Support remotes using git+ssh and ssh+git as protocol.
    Closes: #607056

 -- Joey Hess <joeyh@debian.org>  Tue, 14 Dec 2010 13:05:10 -0400

git-annex (0.12) unstable; urgency=low

  * Add --exclude option to exclude files from processing.